--- a/GrpcGreeterClient/GrpcGreeterClient.csproj
+++ b/GrpcGreeterClient/GrpcGreeterClient.csproj
@@ -2,19 +2,22 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Google.Protobuf" Version="3.9.2" />
-    <PackageReference Include="Grpc.Net.Client" Version="2.23.2" />
-    <PackageReference Include="Grpc.Tools" Version="2.23.0">
+    <PackageReference Include="Grpc.Net.Client" Version="2.29.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.30.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-    <Protobuf Include="..\Protos\*.proto" GrpcServices="Client" Link="Protos/%(RecursiveDir)%(Filename)%(Extension)"></Protobuf>
+    <Protobuf Include="..\Protos\*.proto" GrpcServices="Client" Link="Protos\%(RecursiveDir)%(Filename)%(Extension)"></Protobuf>
+  </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\ProtoLibrary\ProtoLibrary.csproj" />
   </ItemGroup>
 </Project>
