--- a/GrpcGreeterService/GrpcGreeterService.csproj
+++ b/GrpcGreeterService/GrpcGreeterService.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.29.0" />
+    <PackageReference Include="Grpc.AspNetCore.Web" Version="2.29.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.5" />
   </ItemGroup>
 
